--- a/.verb.md
+++ b/.verb.md
@@ -181,3 +181,4 @@ firedux.ref.authWithOAuthPopup("twitter", (error, authData) => {
 [react]: https://facebook.github.io/react/
 [redux]: http://redux.js.org/
 [firebase]: https://www.firebase.com/
+TEST
